# lidar

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  TODO_large_assets.md  atmospheric_lidar_pollution_plan.md  pyproject.toml  激光颗粒物.md
atmospheric_lidar_pollution.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
configs/: CommercialPmeyeSector.json  DefaultPipeline.json  FieldScanningLidar.json  MobileMappingLidar.json  cloudnet_hybrid_pipeline.json  default_pipeline.json  field_scanning_lidar.json  mobile_mapping_lidar.json  ylj5_calibration.template.json
cpp/Log/: CMakeLists.txt
cpp/Log/include/lidar_log/: Logger.hpp
cpp/Log/src/: Logger.cpp
cpp/apps/: ApiServer.cpp  BuildDemoAssets.cpp  FetchCloudnetPublicSample.cpp  FetchPublicGroundData.cpp  RunBatch.cpp  api_server.cpp  build_demo_assets.cpp  fetch_cloudnet_public_sample.cpp  fetch_public_ground_data.cpp  run_batch.cpp
cpp/client/: CMakeLists.txt
cpp/client/apps/: LidarControlClient.cpp  LidarGui.cpp  lidar_gui.cpp  main.cpp
cpp/client/include/lidar_client/: AlarmPanel.hpp  AlarmStateMachine.hpp  DeviceStatusModel.hpp  DisplaySnapshot.hpp  DisposalLinkage.hpp  FrameProcessor.hpp  HotspotTracker.hpp  LidarClientWorker.hpp  MainWindow.hpp  PpiWidget.hpp  ReportGenerator.hpp  ScanCycleMonitor.hpp  TcpClient.hpp  VerticalProfileWidget.hpp  alarm_panel.hpp  alarm_state_machine.hpp  disposal_linkage.hpp  frame_processor.hpp  hotspot_tracker.hpp  main_window.hpp  ppi_widget.hpp  process.md  report_generator.hpp
cpp/client/src/: AlarmPanel.cpp  AlarmStateMachine.cpp  DeviceStatusModel.cpp  DisplaySnapshot.cpp  DisposalLinkage.cpp  FrameProcessor.cpp  HotspotTracker.cpp  LidarClientWorker.cpp  MainWindow.cpp  PpiWidget.cpp  ReportGenerator.cpp  ScanCycleMonitor.cpp  TcpClient.cpp  VerticalProfileWidget.cpp  alarm_panel.cpp  alarm_state_machine.cpp  disposal_linkage.cpp  frame_processor.cpp  hotspot_tracker.cpp  main_window.cpp  ppi_widget.cpp  report_generator.cpp  tcp_client.cpp
cpp/core/: CMakeLists.txt
cpp/core/include/lidar_core/: LidarCore.hpp  lidar_core.hpp
cpp/examples/: Example1dRay.cpp  Example1dRayOutput.hpp  Example1dRayPhysics.hpp  Example2dPpi.cpp  Example3dRhi.cpp  ExampleCommon.hpp  RunFullDemo.cpp  example_1d_ray.cpp  example_2d_ppi.cpp  example_3d_rhi.cpp  example_common.hpp  run_full_demo.cpp
cpp/include/LidarDemo/: DataTypes.hpp  Json.hpp  LidarDemo.hpp  PipelineConfig.hpp  ProcessingSteps.hpp
cpp/include/lidar_demo/: lidar_demo.hpp
cpp/protocol/: CMakeLists.txt
cpp/protocol/include/lidar_protocol/: Frame.hpp  frame.hpp
cpp/protocol/src/: WireFormat.cpp  wire_format.cpp
cpp/server/: CMakeLists.txt
cpp/server/apps/: LidarSimServer.cpp  main.cpp
cpp/server/include/lidar_server/: DevicePlaybackTiming.hpp  SimDevice.hpp  TcpServer.hpp  Ylj5DeviceSpec.hpp  sim_device.hpp  tcp_server.hpp
cpp/server/src/: DevicePlaybackTiming.cpp  SimDevice.cpp  TcpServer.cpp  sim_device.cpp  tcp_server.cpp
cpp/src/: JsonEngine.cpp  LidarDemo.cpp  lidar_demo.cpp
cpp/src/LidarDemo/: CloudnetCampaign.hpp  ConfigParser.hpp  DashboardApi.hpp  DataFetchApi.hpp  DemoPayload.hpp  EndToEndApi.hpp  GroundRecordUtilities.hpp  HotspotDetection.hpp  HttpDownloader.hpp  MathUtilities.hpp  MetricsAndFailureCases.hpp  NetcdfReader.hpp  PipelineRun.hpp  ProcessingAlgorithms.hpp  ProcessingStepApi.hpp  PublicHelperUtilities.hpp  RealtimeHotspotDetection.hpp  RealtimeProcessingAlgorithms.hpp  SerializationAndResultTypes.hpp  SimulatedCampaign.hpp  SimulationPhysics.hpp
cpp/tests/: TestClientDeviceTelemetry.cpp  TestClientFrameProcessor.cpp  TestClientSimDevicePipeline.cpp  TestClosedLoop.cpp  TestDevicePlaybackTiming.cpp  TestLog.cpp  TestPipeline.cpp  TestSimDeviceYlj5.cpp  test_closed_loop.cpp  test_pipeline.cpp
data/l1/: demo_preprocessed.json
data/l2/: demo_results.json  worker_summary.json
data/public/: README.md  open_meteo_beijing_fetch_manifest.json  open_meteo_beijing_ground_pm_meteo.csv  open_meteo_beijing_ground_pm_meteo.json  public_dataset_registry.json
data/public/cloudnet/: 20250423_bucharest_manifest.json  20250423_bucharest_open_meteo_air_quality.json  20250423_bucharest_open_meteo_weather.json  open_meteo_20250423_ground_pm_meteo.csv  open_meteo_20250423_ground_pm_meteo.json  open_meteo_20250423_ground_pm_meteo_manifest.json
data/raw/: simulated_demo_campaign.json
docs/: 0. 先用一句人话讲清楚这套系统.md  1. 这套系统到底能做什么，不能做什么.md  10. 硬件怎么选，小白先抓住哪些原则.md  11. 颗粒物版本的数据处理到底怎么走.md  12. 算法部分展开讲：从回波到消光、PM 和热点.md  12_week_plan.md  13. 从极坐标到地图坐标，再到 3D 污染物范围.md  13. 从极坐标到地图坐标，再到 UI 图层.md  14. 软件到底应该做成什么样，小白先建立正确的 UI 预期.md  14. 软件到底应该做成什么样：地图 + 3D 污染物可视化.md  15. 一个最现实的工程闭环是什么样.md  16. 两周 MVP 应该怎么排，不要一开始就铺太大.md  17. 小白最容易掉进去的坑.md  18. 你现在应该先记住哪几句话.md  19. 一个完整算例：从原始回波到热点告警.md  2. 先把几个最关键的词看懂.md  20. 一个适合你的学习顺序.md  21. 参考资料.md  3. 整个系统由哪些部分组成.md  3.5 补课：关于光，你需要知道的最少知识.md  4. 从一束脉冲到一条距离曲线，中间发生了什么.md  5. 最核心的 LiDAR 方程，必须真正看懂.md  6. 为什么单靠一条回波曲线，不能直接把所有物理量都解出来.md  7. 什么是 Rayleigh、Mie、偏振，为什么颗粒物主要看 Mie.md  8. 为什么第一版不建议直接做气体 DIAL.md  9. 工程上应该怎么部署：固定式和车载式为什么都重要.md  algorithm_processing_chain.md  cpp_architecture_refactor_plan.md  lidar_raw_frame_reference.md  project_supplement.md  realistic_lidar_simulation.md  resume_project_entry.md  vendor_frame_reconstruction.md  ylj5_fidelity.md
experiments/: experiment_log_template.md
lidar_core/: __init__.py  models.py  pipeline.py
lidar_core/calibration/: __init__.py  humidity.py  pm.py
lidar_core/data_sources/: __init__.py  cloudnet.py  factory.py
lidar_core/detection/: __init__.py  hotspots.py
lidar_core/geometry/: __init__.py  enu.py
lidar_core/io/: __init__.py  json_io.py
lidar_core/preprocessing/: __init__.py  pipeline.py
lidar_core/qa/: __init__.py  metrics.py
lidar_core/retrieval/: __init__.py  fernald.py
lidar_core/simulation/: __init__.py  scene.py
scripts/: build_demo_assets.py  fetch_cloudnet_public_sample.py  fetch_public_ground_data.py
services/: __init__.py
services/api/: __init__.py  server.py
services/workers/: __init__.py  run_batch.py
tests/: test_pipeline.py
tools/: md_to_pdf.py
web/: demo_dashboard.html
