[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atmospheric-lidar-pollution"
version = "0.1.0"
description = "Atmospheric lidar particulate monitoring demo with simulation, inversion, calibration, and hotspot detection."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "netCDF4>=1.7"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lidar_core*", "services*"]
